classification report analysis

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -522,7 +522,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** This model has a high rate of accuracy: 0.99%. The precision, recall, and f1-score for the healthly loan labels (0) are extremely high: 1.00, 0.99, and 1.00 respectively. The same scores for the high-risk loan labels (1) are lower: 0.84, 0.94, 0.89 respectively, but overall this model still does a very good job of predicting the correct labels."
    ]
   },
   {
